--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title data-i18n="blog.pageTitle">AI模型洞察与教程 - Model Guru</title>
-    <meta name="description" data-i18n="blog.pageDescription" content="探索最新的AI模型趋势、教程和最佳实践，帮助您更好地理解和使用AI模型。">
+    <title data-i18n="blog.pageTitle">AI Model Insights & Tutorials - Model Guru</title>
+    <meta name="description" data-i18n="blog.pageDescription" content="Explore the latest AI model trends, tutorials, and best practices to help you better understand and use AI models.">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
@@ -21,8 +21,7 @@
         <i class="fas fa-moon"></i>
     </button>
 
-    <!-- Particles Background -->
-    <div id="particles-js"></div>
+    <!-- Particles Background Removed -->
 
     <!-- Navigation -->
     <nav class="nav">
@@ -49,8 +48,8 @@
     <section class="hero hero-small">
         <div class="container">
             <div class="hero-content">
-                <h1 data-i18n="blog.title">AI 模型洞察与教程</h1>
-                <p data-i18n="blog.subtitle">最新的 AI 模型趋势、教程和最佳实践</p>
+                <h1 data-i18n="blog.title">AI Model Insights & Tutorials</h1>
+                <p data-i18n="blog.subtitle">Latest AI model trends, tutorials, and best practices</p>
             </div>
         </div>
     </section>
@@ -59,11 +58,11 @@
     <section class="blog-categories">
         <div class="container">
             <div class="category-tabs">
-                <button class="category-tab active" data-category="all">全部</button>
-                <button class="category-tab" data-category="tutorials">教程</button>
-                <button class="category-tab" data-category="trends">趋势分析</button>
-                <button class="category-tab" data-category="case-studies">案例研究</button>
-                <button class="category-tab" data-category="best-practices">最佳实践</button>
+                <button class="category-tab active" data-category="all" data-i18n="blog.categories.all">All</button>
+                <button class="category-tab" data-category="tutorials" data-i18n="blog.categories.tutorials">Tutorials</button>
+                <button class="category-tab" data-category="trends" data-i18n="blog.categories.trends">Trend Analysis</button>
+                <button class="category-tab" data-category="case-studies" data-i18n="blog.categories.caseStudies">Case Studies</button>
+                <button class="category-tab" data-category="best-practices" data-i18n="blog.categories.bestPractices">Best Practices</button>
             </div>
         </div>
     </section>
@@ -78,10 +77,10 @@
                         <img src="img/blog-placeholder.svg" alt="Stable Diffusion Guide">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年4月15日</span>
-                        <h3 class="blog-title">Stable Diffusion XL 完全指南：参数优化与提示词技巧</h3>
-                        <p class="blog-excerpt">了解如何充分利用 Stable Diffusion XL 的强大功能，包括关键参数设置和提示词工程最佳实践...</p>
-                        <a href="/blog/stable-diffusion-guide" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card1.date">April 15, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card1.title">Complete Guide to Stable Diffusion XL: Parameter Optimization and Prompt Engineering</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card1.excerpt">Learn how to fully leverage the power of Stable Diffusion XL, including key parameter settings and prompt engineering best practices...</p>
+                        <a href="/blog/stable-diffusion-guide" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
 
@@ -91,10 +90,10 @@
                         <img src="img/blog-placeholder.svg" alt="LLM Trends 2024">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年4月10日</span>
-                        <h3 class="blog-title">2024年大语言模型发展趋势：从Mixtral到Claude 3</h3>
-                        <p class="blog-excerpt">探索2024年大语言模型领域的最新发展趋势，包括开源模型的崛起和商业应用的新方向...</p>
-                        <a href="/blog/llm-trends-2024" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card2.date">April 10, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card2.title">2024 Large Language Model Trends: From Mixtral to Claude 3</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card2.excerpt">Explore the latest developments in the large language model space in 2024, including the rise of open-source models and new directions for commercial applications...</p>
+                        <a href="/blog/llm-trends-2024" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
 
@@ -104,10 +103,10 @@
                         <img src="img/blog-placeholder.svg" alt="Midjourney Case Study">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年4月5日</span>
-                        <h3 class="blog-title">案例研究：设计工作室如何利用Midjourney提升创意效率</h3>
-                        <p class="blog-excerpt">深入了解一家设计工作室如何将Midjourney整合到其工作流程中，大幅提升创意产出效率...</p>
-                        <a href="/blog/midjourney-case-study" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card3.date">April 5, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card3.title">Case Study: How Design Studios Use Midjourney to Boost Creative Efficiency</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card3.excerpt">Deep dive into how a design studio integrated Midjourney into their workflow to significantly increase creative output efficiency...</p>
+                        <a href="/blog/midjourney-case-study" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
 
@@ -117,10 +116,10 @@
                         <img src="img/blog-placeholder.svg" alt="AI Model Selection">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年3月28日</span>
-                        <h3 class="blog-title">如何为您的项目选择最合适的AI模型：决策框架</h3>
-                        <p class="blog-excerpt">提供一个实用的决策框架，帮助开发者和创意人员为特定项目选择最合适的AI模型...</p>
-                        <a href="/blog/ai-model-selection" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card4.date">March 28, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card4.title">How to Choose the Right AI Model for Your Project: A Decision Framework</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card4.excerpt">Provides a practical decision framework to help developers and creatives select the most appropriate AI model for specific projects...</p>
+                        <a href="/blog/ai-model-selection" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
 
@@ -130,10 +129,10 @@
                         <img src="img/blog-placeholder.svg" alt="Audio Generation Guide">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年3月20日</span>
-                        <h3 class="blog-title">AI音频生成入门：从Stable Audio到AudioCraft</h3>
-                        <p class="blog-excerpt">探索当前最先进的AI音频生成模型，学习如何创建高质量的音乐、音效和语音内容...</p>
-                        <a href="/blog/audio-generation-guide" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card5.date">March 20, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card5.title">Introduction to AI Audio Generation: From Stable Audio to AudioCraft</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card5.excerpt">Explore the current state-of-the-art AI audio generation models and learn how to create high-quality music, sound effects, and voice content...</p>
+                        <a href="/blog/audio-generation-guide" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
 
@@ -143,10 +142,10 @@
                         <img src="img/blog-placeholder.svg" alt="Multimodal AI Future">
                     </div>
                     <div class="blog-content">
-                        <span class="blog-date">2024年3月15日</span>
-                        <h3 class="blog-title">多模态AI的未来：GPT-4V、Claude 3和Gemini的比较</h3>
-                        <p class="blog-excerpt">分析当前领先的多模态AI模型，探讨它们的能力差异和未来发展方向...</p>
-                        <a href="/blog/multimodal-ai-future" class="btn btn-text">阅读更多</a>
+                        <span class="blog-date" data-i18n="blog.blogCards.card6.date">March 15, 2024</span>
+                        <h3 class="blog-title" data-i18n="blog.blogCards.card6.title">The Future of Multimodal AI: Comparing GPT-4V, Claude 3, and Gemini</h3>
+                        <p class="blog-excerpt" data-i18n="blog.blogCards.card6.excerpt">Analysis of current leading multimodal AI models, discussing their capability differences and future development directions...</p>
+                        <a href="/blog/multimodal-ai-future" class="btn btn-text" data-i18n="blog.readMoreButton">Read More</a>
                     </div>
                 </div>
             </div>
@@ -161,18 +160,22 @@
         </div>
     </section>
 
-    <!-- Newsletter Section -->
-    <section id="newsletter" class="newsletter">
-        <div class="container">
-            <div class="newsletter-content">
-                <h2 data-i18n="newsletter.title">订阅 AI 模型更新</h2>
-                <p data-i18n="newsletter.description">每周接收最新的 AI 模型、趋势和教程直接发送到您的收件箱</p>
-                <form class="newsletter-form">
+    <!-- Combined CTA and Newsletter Section -->
+    <section class="cta-section">
+            <div class="cta-content">
+            <div class="cta-text">
+                <h2>Ready to Transform Your AI Experience?</h2>
+                <p>Join thousands of developers and businesses who are already using Model Guru to find the perfect AI models for their needs. Get started today and discover the power of AI model comparison.</p>
+                </div>
+            <div class="cta-form">
+                <h3>Stay Updated</h3>
+                <p>Subscribe to our newsletter for the latest AI model updates and insights</p>
+                <form id="newsletter-form">
                     <div class="form-group">
-                        <input type="email" placeholder="您的电子邮件地址" required>
-                        <button type="submit" class="btn btn-primary" data-i18n="newsletter.subscribe">订阅</button>
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
                     </div>
-                    <p class="newsletter-privacy" data-i18n="newsletter.privacy">我们尊重您的隐私，绝不会分享您的电子邮件。您可以随时取消订阅。</p>
+                    <button type="submit" class="btn btn-primary">Subscribe Now</button>
                 </form>
             </div>
         </div>
@@ -212,16 +215,7 @@
     <script type="module" src="js/i18n.js"></script>
     <script type="module" src="js/main.js"></script>
     <script>
-        // Particles.js initialization (copy from index.html if needed)
-        window.addEventListener('load', function() {
-            if (typeof particlesJS !== 'undefined') {
-                particlesJS('particles-js', {
-                    // Paste particles.js config here
-                });
-            } else {
-                console.warn('particles.js not loaded');
-            }
-        });
+        // Particles.js initialization removed
 
         // Blog category filtering
         document.addEventListener('DOMContentLoaded', function() {
