--- a/reports.html
+++ b/reports.html
@@ -340,28 +340,24 @@
         </div>
     </section>
 
-    <!-- Newsletter Section -->
-    <section class="newsletter-section">
-        <div class="container">
-            <!-- Removed Premium CTA grid wrapper -->
-            <!-- <div class="section-grid"> -->
-                <!-- Premium CTA content moved to its own section -->
-
-                <!-- Newsletter -->
-                <div class="newsletter-content">
-                    <svg width="60" height="60" viewBox="0 0 60 60" class="newsletter-icon">
-                        <rect x="5" y="15" width="50" height="30" rx="4" fill="none" stroke="#8b5cf6" stroke-width="2"></rect>
-                        <path d="M5 15l25 20 25-20" stroke="#8b5cf6" stroke-width="2" fill="none"></path>
-                    </svg>
-                    <h2>Stay Updated</h2>
-                    <p>Get weekly insights and updates about AI models</p>
-                    <form class="newsletter-form">
-                        <input type="email" placeholder="Your email address" required>
-                        <button type="submit" class="btn btn-primary">Subscribe</button>
-                    </form>
-                    <p class="privacy-note">We respect your privacy and will never share your email.</p>
+    <!-- Combined CTA and Newsletter Section -->
+    <section class="cta-section">
+            <div class="cta-content">
+            <div class="cta-text">
+                <h2>Ready to Transform Your AI Experience?</h2>
+                <p>Join thousands of developers and businesses who are already using Model Guru to find the perfect AI models for their needs. Get started today and discover the power of AI model comparison.</p>
                 </div>
-            <!-- </div> -->
+            <div class="cta-form">
+                <h3>Stay Updated</h3>
+                <p>Subscribe to our newsletter for the latest AI model updates and insights</p>
+                <form id="newsletter-form">
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Subscribe Now</button>
+                </form>
+            </div>
         </div>
     </section>
 
