--- a/testimonials.html
+++ b/testimonials.html
@@ -177,16 +177,23 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
+    <!-- Combined CTA and Newsletter Section -->
     <section class="cta-section">
-        <div class="container">
             <div class="cta-content">
-                <h2>Ready to Transform Your AI Development?</h2>
-                <p>Join thousands of developers and businesses using Model Guru to make better AI decisions</p>
-                <div class="cta-buttons">
-                    <a href="models.html" class="btn btn-primary">Explore Models</a>
-                    <a href="reports.html" class="btn btn-secondary">View Reports</a>
+            <div class="cta-text">
+                <h2>Ready to Transform Your AI Experience?</h2>
+                <p>Join thousands of developers and businesses who are already using Model Guru to find the perfect AI models for their needs. Get started today and discover the power of AI model comparison.</p>
                 </div>
+            <div class="cta-form">
+                <h3>Stay Updated</h3>
+                <p>Subscribe to our newsletter for the latest AI model updates and insights</p>
+                <form id="newsletter-form">
+                    <div class="form-group">
+                        <label for="email">Email Address</label>
+                        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Subscribe Now</button>
+                </form>
             </div>
         </div>
     </section>
